{
  "version": 4,
  "terraform_version": "1.13.4",
  "serial": 20,
  "lineage": "159ccd2f-787b-5f62-8292-003f33d57f08",
  "resources": [
    {
      "mode": "data",
      "type": "aws_vpc",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:211811255273:vpc/vpc-0eddc0c6acd65341d",
            "cidr_block": "172.31.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-0c53cad199e96f119",
                "cidr_block": "172.31.0.0/16",
                "state": "associated"
              }
            ],
            "default": true,
            "dhcp_options_id": "dopt-01182cdf7f92318b3",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0eddc0c6acd65341d",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0cac89fabf36b4044",
            "owner_id": "211811255273",
            "region": "us-west-2"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "test_target",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-04ff058e9d3459834",
            "arn": "arn:aws:ec2:us-west-2:211811255273:instance/i-05c942bb80bc8a63c",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-05c942bb80bc8a63c",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-03445c8fd857ab460"
              }
            ],
            "primary_network_interface_id": "eni-03445c8fd857ab460",
            "private_dns": "ip-172-31-36-44.us-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.36.44",
            "public_dns": "ec2-35-87-126-27.us-west-2.compute.amazonaws.com",
            "public_ip": "35.87.126.27",
            "region": "us-west-2",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "tags": {
                  "Ephemeral": "true",
                  "ManagedBy": "Terraform",
                  "Purpose": "apigateway-test-prereqs-minimal"
                },
                "tags_all": {
                  "Ephemeral": "true",
                  "ManagedBy": "Terraform",
                  "Purpose": "apigateway-test-prereqs-minimal"
                },
                "throughput": 125,
                "volume_id": "vol-0b124f80b2b8cbb41",
                "volume_size": 2,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "apigw-simple-test-target-sg"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0baeca02ecdba36e6",
            "tags": {
              "Name": "apigw-simple-test-target"
            },
            "tags_all": {
              "Ephemeral": "true",
              "ManagedBy": "Terraform",
              "Name": "apigw-simple-test-target",
              "Purpose": "apigateway-test-prereqs-minimal"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-021dfa4c452c906f5"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "211811255273",
            "id": "i-05c942bb80bc8a63c",
            "region": "us-west-2"
          },
          "dependencies": [
            "aws_security_group.test_target",
            "data.aws_ami.amazon_linux",
            "data.aws_subnets.default",
            "data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "test_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-west-2:211811255273:loadbalancer/app/apigw-simple-test-alb/aefa1204f37a0ebf",
            "arn_suffix": "app/apigw-simple-test-alb/aefa1204f37a0ebf",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "apigw-simple-test-alb-809087577.us-west-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_prefix_for_ipv6_source_nat": "off",
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "health_check_logs": [
              {
                "enabled": false
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-2:211811255273:loadbalancer/app/apigw-simple-test-alb/aefa1204f37a0ebf",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "apigw-simple-test-alb",
            "preserve_host_header": false,
            "region": "us-west-2",
            "security_groups": [
              "sg-021dfa4c452c906f5"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0aaeb4b0fcaeca09a"
              },
              {
                "subnet_id": "subnet-0baeca02ecdba36e6"
              },
              {
                "subnet_id": "subnet-0d35e8b82945f3483"
              },
              {
                "subnet_id": "subnet-0e280e1f2b17019cb"
              }
            ],
            "subnets": [
              "subnet-0aaeb4b0fcaeca09a",
              "subnet-0baeca02ecdba36e6",
              "subnet-0d35e8b82945f3483",
              "subnet-0e280e1f2b17019cb"
            ],
            "tags_all": {
              "Ephemeral": "true",
              "ManagedBy": "Terraform",
              "Purpose": "apigateway-test-prereqs-minimal"
            },
            "vpc_id": "vpc-0eddc0c6acd65341d",
            "xff_header_processing_mode": "append",
            "zone_id": "Z1H1FL5HABSF5"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-west-2:211811255273:loadbalancer/app/apigw-simple-test-alb/aefa1204f37a0ebf"
          },
          "dependencies": [
            "aws_security_group.test_target",
            "data.aws_subnets.default",
            "data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "test_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-west-2:211811255273:listener/app/apigw-simple-test-alb/aefa1204f37a0ebf/23fea7ffae0dceab",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "jwt_validation": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-west-2:211811255273:targetgroup/apigw-simple-alb-tg/89896dc1d84ef413",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-2:211811255273:listener/app/apigw-simple-test-alb/aefa1204f37a0ebf/23fea7ffae0dceab",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-west-2:211811255273:loadbalancer/app/apigw-simple-test-alb/aefa1204f37a0ebf",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "region": "us-west-2",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {
              "Ephemeral": "true",
              "ManagedBy": "Terraform",
              "Purpose": "apigateway-test-prereqs-minimal"
            },
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-west-2:211811255273:listener/app/apigw-simple-test-alb/aefa1204f37a0ebf/23fea7ffae0dceab"
          },
          "dependencies": [
            "aws_lb.test_alb",
            "aws_lb_target_group.alb_target",
            "aws_security_group.test_target",
            "data.aws_subnets.default",
            "data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "alb_target",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-west-2:211811255273:targetgroup/apigw-simple-alb-tg/89896dc1d84ef413",
            "arn_suffix": "targetgroup/apigw-simple-alb-tg/89896dc1d84ef413",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-2:211811255273:targetgroup/apigw-simple-alb-tg/89896dc1d84ef413",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "apigw-simple-alb-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "region": "us-west-2",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags_all": {
              "Ephemeral": "true",
              "ManagedBy": "Terraform",
              "Purpose": "apigateway-test-prereqs-minimal"
            },
            "target_control_port": 0,
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0eddc0c6acd65341d"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-west-2:211811255273:targetgroup/apigw-simple-alb-tg/89896dc1d84ef413"
          },
          "dependencies": [
            "data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "alb_target",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-west-2:211811255273:targetgroup/apigw-simple-alb-tg/89896dc1d84ef413,i-05c942bb80bc8a63c,80",
            "port": 80,
            "region": "us-west-2",
            "target_group_arn": "arn:aws:elasticloadbalancing:us-west-2:211811255273:targetgroup/apigw-simple-alb-tg/89896dc1d84ef413",
            "target_id": "i-05c942bb80bc8a63c"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "211811255273",
            "port": 80,
            "region": "us-west-2",
            "target_group_arn": "arn:aws:elasticloadbalancing:us-west-2:211811255273:targetgroup/apigw-simple-alb-tg/89896dc1d84ef413",
            "target_id": "i-05c942bb80bc8a63c"
          },
          "dependencies": [
            "aws_instance.test_target",
            "aws_lb_target_group.alb_target",
            "aws_security_group.test_target",
            "data.aws_ami.amazon_linux",
            "data.aws_subnets.default",
            "data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "test_target",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:211811255273:security-group/sg-021dfa4c452c906f5",
            "description": "Allows HTTP from the internet -- ALB is public-facing for this simplified test",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-021dfa4c452c906f5",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP from internet",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "apigw-simple-test-target-sg",
            "name_prefix": "",
            "owner_id": "211811255273",
            "region": "us-west-2",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {
              "Ephemeral": "true",
              "ManagedBy": "Terraform",
              "Purpose": "apigateway-test-prereqs-minimal"
            },
            "timeouts": null,
            "vpc_id": "vpc-0eddc0c6acd65341d"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "211811255273",
            "id": "sg-021dfa4c452c906f5",
            "region": "us-west-2"
          },
          "dependencies": [
            "data.aws_vpc.default"
          ]
        }
      ]
    }
  ]
}